[package]
name = "quici"
version = "0.1.0"
edition = "2021"
authors = ["BeanCode <info@beancode.de>"]
readme = "README.md"
repository = "https://github.com/BeanCodeDe/quici"
license-file = "LICENSE"
keywords = ["udp", "communication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
