[package]
name = "quici"
version = "0.1.0"
edition = "2021"
authors = ["BeanCode <info@beancode.de>"]
readme = "README.md"
repository = "https://github.com/BeanCodeDe/quici"
license-file = "LICENSE"
keywords = ["udp", "communication"]
description = "A quick connection interface written in Rust to send data over UDP with the ability to get an ack for some messages. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.3.4"
